# A2AC7JHighet

./: .gitignore  INTEGRATE.md  JOURNAL.md  PLAN.md  PLAN_after.md  PLAN_before.md  STEPS.md  agents.md  eval_report.json  pyproject.toml
.agent/rules/: memory.md
.agent/workflows/: sync-memory.md
.eval_conversations/: 4bed9fb8-394d-4c2e-8e84-434e79d2187f.json  945a87a7-f7d2-4937-a547-84b87408c140.json  e8c72c28-be42-46ad-b2c8-d72e263158e1.json
.traces/: trace_03bd4ea5c7be039b427c6063e574d1f0.json  trace_18b842df58b836c9febfa5a8748d28ce.json  trace_234696e1b4cf98981de8c2642786a5f7.json  trace_2ff4f45d0fb11c6e69cc5e625185e394.json  trace_3159c30698dde10ed845f081f9c12e4d.json  trace_405c9abcc84e3469a9b2ddd3009ec794.json  trace_6625f43ee06ca7eb646c3fe1b5e7fbcf.json  trace_6f6c493a4347b0fbfbf34cede5c0c508.json  trace_70f631bdc7b9c905ae1282aa0a6c568f.json  trace_78554bc68e83671a3c60c5f904e301be.json  trace_7f01483420eb50d1e4cbb94e4ffd8437.json  trace_8e36b654c67b961ec7e1deddc96b1854.json  trace_bd26bf19be4c2b231820a2cdadba32ef.json  trace_c3cc9a488d35b221276d3bd3aaf3e7f5.json  trace_d85319ff4d881be1770a497f08014f9b.json  trace_de1063bb0fda685203fd29d74dc79bef.json  trace_e2ab08a60a33be8d3af25031b7b74243.json  trace_e5150ec918030c5c549cbcdaaab0154b.json
Archived/: README.md  pyproject.toml
Archived/Modules1to5/acme-devops-cli/: pyproject.toml
Archived/planning/: DESIGN.md  (+1 more)
Modules1to5/acme-devops-mcp/http_server/: main.py  pyproject.toml
Prompts/: 2-web-api-prompt.md  3-web-api-plan.md  4-admin-ui-prompt.md  module2.md
acme-devops-api/: pyproject.toml
acme-devops-mcp/: IMPLEMENTATION_PLAN.md  README.md  check_cli_loc.py  consolidation_results.txt  debug_output_3.txt  debug_output_4.txt  debug_promote.py  error_log.txt  main.py  pyproject.toml  test_output.txt  test_results_utf8_10.txt  test_results_utf8_11.txt  test_results_utf8_12.txt  test_results_utf8_4.txt  test_results_utf8_9.txt  verify_paths.py
acme-devops-mcp/http_server/: __init__.py  main.py  pyproject.toml  test_http_mcp.py  test_output_http_2.txt
acme-devops-mcp/src/acme_devops_mcp/: server.py
acme-devops-mcp/stdio_server/: main.py
acme-devops-mcp/tests/: test_fastmcp.py  test_integration_http.py  test_server.py
changes/: 001-setup-workflow.md  TEMPLATE.md
config-service/: .env.example  .gitignore  package.json.2938181026  pyproject.toml
config-service/app/: config.py  config_test.py  database_test.py  main.py  main_test.py
config-service/app/applications/: models.py  repository.py  repository_test.py  service.py  service_test.py
config-service/app/configurations/: models.py  repository_test.py  router.py  router_test.py  service.py  service_test.py
config-service/db/: run_migrations.py
config-service/db/migrations/: 002_create_configurations.sql
detective_agent/: agent.py  agent_test.py  cli.py  config.py  context.py  eval_scenarios.json  eval_test.py  models.py  observability.py  persistence.py  persistence_test.py  prompts.py  provider.py  provider_test.py  tools.py  tools_test.py
example/investigator/: .env.example  .gitignore  README.md  cli.py  pyproject.toml
example/investigator/.claude/: settings.local.json
example/investigator/exercise/: EXERCISE.md  PLAN.md  STEPS.md
example/investigator/src/agent/: graph.py  graph_test.py  prompts.py  prompts_test.py  state_test.py
example/investigator/src/evaluation/: README.md  evaluators.py  evaluators_test.py  runner.py  scenarios.py
example/investigator/src/investigator/: __init__.py
example/investigator/src/observability/: callbacks.py  exporter.py  tracer.py  tracer_test.py
example/investigator/src/tools/: analysis.py  analysis_test.py  jira.py  jira_test.py
example/investigator/src/utils/: config.py  config_test.py  conversation_persistence.py  conversation_persistence_test.py  file_utils.py  file_utils_test.py
example/investigator/tests/integration/: test_agent_tool_integration.py  test_readiness_decisions.py
examples/investigator/: .env.example  .gitignore  AGENTS.md  DESIGN.md  EXERCISE.md  PLAN.md  README.md  STEPS.md  cli.py  docker-compose.yml  pyproject.toml
examples/investigator/chroma/: Dockerfile  chroma_mcp_sse_server.py
examples/investigator/graphiti/: Dockerfile  graphiti_mcp_server.py  pyproject.toml
examples/investigator/scripts/: ingest_code_to_neo4j.py  query_vector_store.py
examples/investigator/src/agent/: graph.py  graph_test.py  memory.py  memory_test.py  prompts.py  prompts_test.py  state.py  state_test.py
examples/investigator/src/evaluation/: evaluators.py  evaluators_test.py  scenarios.py  scenarios_test.py
examples/investigator/src/observability/: callbacks.py  exporter.py  tracer.py  tracer_test.py
examples/investigator/src/tools/: analysis.py  analysis_test.py  jira.py  jira_test.py  planning.py  planning_test.py
examples/investigator/src/utils/: config_test.py  constants.py  constants_test.py  conversation_persistence_test.py  file_utils.py
examples/investigator/tests/integration/: test_agent_tool_integration.py  test_readiness_decisions.py
investigator/: .gitignore  README.md  cli.py  debug_graph.py  main.py  pyproject.toml  run_eval.py  tmp_refresh_eval.py  validate_step_2.py  validate_step_3.py
investigator/src/: __init__.py
investigator/src/agent/: graph.py  graph_test.py  memory.py  memory_test.py  prompts.py  prompts_test.py  state.py  state_test.py
investigator/src/evaluation/: __init__.py  evaluators.py  evaluators_test.py  runner.py  scenarios.py
investigator/src/observability/: callbacks.py  exporter.py  tracer.py  tracer_test.py
investigator/src/tools/: analysis.py  analysis_test.py  jira.py  jira_test.py  planning.py  planning_test.py  planning_verification.py
investigator/src/utils/: config.py  config_test.py  conversation_persistence.py  conversation_persistence_test.py  file_utils.py
investigator/tests/integration/: verify_step1.py  verify_step2.py  verify_step3.py
memory/: ABOUT.md  ARCHITECTURE.md  ENV_SCRIPTS.md  TECHNICAL.md  WORKFLOW_STATUS.md
planning/: STEPS.md  plan.md
ui/: index.html  vite.config.ts  vitest.config.ts
(+89 files in other folders)
