[project]
name = "acme-devops-mcp"
version = "0.1.0"
description = "A minimal MCP server for Module 5"
readme = "README.md"
authors = [
    { name = "Acme DevOps", email = "devops@acme.com" }
]
requires-python = ">=3.13"
dependencies = [
    "acme-devops-cli",
    "mcp>=1.2.6",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
acme-devops-mcp = "acme_devops_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
acme-devops-cli = { path = "../acme-devops-cli" }
