[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-dashboard-mcp"
version = "0.1.0"
description = "DevOps Dashboard MCP Server Example - Educational implementation demonstrating both stdio and HTTP MCP server patterns"
authors = [
    {name = "Don Smith, HYPR"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
http-server = "http_server.main:main"
stdio-server = "stdio_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["stdio_server", "http_server"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["stdio_server", "http_server"]
python_files = "*_test.py"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.35.0",
    "respx>=0.22.0",
]
